--- a/public/clients/css/style.css
+++ b/public/clients/css/style.css
@@ -23,7 +23,7 @@
 
 
 /* General */
-img { max-width: 100%; height: auto; vertical-align: top; } 
+img {max-width: 100%;height: auto;vertical-align: top;object-fit: cover;} 
 .wrap-main,
 .wrap-content {max-width: 1200px;margin: auto;width: calc(100% - 30px);}
 
@@ -119,7 +119,7 @@ img { max-width: 100%; height: auto; vertical-align: top; }
     --height: 32px;
     display: flex;
     justify-content: space-between;
-    width: 450px;
+    width: 350px;
     border: 2px solid #000;
     border-radius: 999px;
     padding: 3px 4px 3px 10px;
@@ -675,6 +675,7 @@ img { max-width: 100%; height: auto; vertical-align: top; }
 .product-detail__attr {
     display: flex;
     align-items: center;
+    margin-bottom: 5px !important;
 }
 
 .product-detail__attr-name {
@@ -728,7 +729,7 @@ img { max-width: 100%; height: auto; vertical-align: top; }
     margin: 0rem 0.25rem 0.25rem 0rem;
 }
 
-.product-detail__storage .storage__item,
+.product-detail__storage .size__item,
 .product-detail__color .color__item {
     text-align: center;
     border: 1px solid var(--color-black);
@@ -736,20 +737,21 @@ img { max-width: 100%; height: auto; vertical-align: top; }
     padding: 10px 20px;
     transition: all 0.3s ease;
     cursor: pointer;
+    position: relative;
 }
 .color__item {
     padding: 3px !important;
-    border-radius: 50% !important;
+    /* border-radius: 50% !important; */
 }
-.product-detail__storage .storage__item:hover,
-.product-detail__storage .storage__item.active,
+.product-detail__storage .size__item:hover,
+.product-detail__storage .size__item.active,
 .product-detail__color .color__item.active,
 .product-detail__color .color__item:hover {
     border-color: var(--color-red);
     box-shadow: 0px 3px 5px 0px #ccc;
 }
 
-.product-detail__storage .storage__name,
+.product-detail__storage .size__name,
 .product-detail__color .color__name {
     font-family: var(--font-semibold);
     font-size: var(--font-sz-m);
@@ -757,13 +759,13 @@ img { max-width: 100%; height: auto; vertical-align: top; }
     transition: all 0.3s ease;
 }
 
-.product-detail__storage .storage__item:hover .storage__name,
-.product-detail__storage .storage__item.active .storage__name,
+.product-detail__storage .size__item:hover .size__name,
+.product-detail__storage .size__item.active .size__name,
 .product-detail__color .color__item.active .color__name,
 .product-detail__color .color__item:hover .color__name {
     color: var(--color-red);
 }
-
+.product-detail__storage .size__item.active:after,.product-detail__color .color__item.active:after { content: ''; position: absolute; bottom: 0px; right: 0px; width: 13px; height: 13px; background-repeat: no-repeat; background-image: url(../images/check-cart.png); } 
 .product-detail__color .color__list,
 .product-detail__storage .storage__list {
     display: flex;
@@ -1336,7 +1338,7 @@ img { max-width: 100%; height: auto; vertical-align: top; }
 .pic-album{float:left;width: 19.2%;margin: 0 1% 1% 0;}
 .pic-album:nth-child(5n+1){clear:both;}
 .pic-album:nth-child(5n){margin-right:0px;}
-.img-album img {height: 300px;display: block;}
+.img-album img {height: 225px;display: block;}
 .max-box {text-align:center}
 .w-clear:after { display: block; content: ""; clear: both; } 
 .img-album {display: block;}
@@ -1429,3 +1431,13 @@ img { max-width: 100%; height: auto; vertical-align: top; }
 .info-tieuchi span {font-size: 13.5px;color: #818181;}
 .wrap-tieuchi .wrap-content::after {content: '';background: url("../images/bottom-criteria.png")no-repeat center center;display:block;width: 100%;height: 21px; position:absolute;left:0;right:0;text-align:center;bottom: -35px; margin: auto;}
 .pic-tieuchi {width: 44px;height: 44px;}
+.card-body.add{padding:0 !important}
+.wrap-album {
+    padding-top: 25px;
+}
+.sty_head_table {background: #000;color: #fff;}
+.table_list_product thead {border-style: unset !important;}
+.table_list_product {background: #f5f5f5 !important;border-radius: 5px !important;overflow: hidden;}
+.box_total_order {text-align: end;max-width: 400px;margin-left: auto;padding-top: 10px;}
+.item_Ship {display: flex;justify-content: space-between;padding: 10px 0;}
+.item_Ship span {font-size: 18px;display: block;}
