--- a/public/clients/css/style.css
+++ b/public/clients/css/style.css
@@ -122,7 +122,7 @@ img {max-width: 100%;height: auto;vertical-align: top;object-fit: cover;}
     --height: 32px;
     display: flex;
     justify-content: space-between;
-    width: 300px;
+    width: 350px;
     border: 2px solid #000;
     border-radius: 999px;
     padding: 3px 4px 3px 10px;
@@ -1884,3 +1884,12 @@ span.pros__price_old { font-size: 13px; color: #000; }
 .news-page:nth-child(3n+1) { clear: both; } 
 .news-page:nth-child(3n) { margin-right: 0px; } 
 .pic-news.add {width: 100%;height: 220px;overflow: hidden;margin: auto;}
+
+.header__block .wrap-content {
+    max-width: 1350px;
+}
+
+
+.slideshow-image a img {
+    height: 450px !important;
+}
