--- a/public/clients/video-slider/ninja-slider.css
+++ b/public/clients/video-slider/ninja-slider.css
@@ -1,6 +1,7 @@
 /* Visit http://www.menucool.com/responsive-slider for instructions */
 #ninja-slider {
     width:100%;
+    height: 450px;
     background: white;
     padding: 0;
     margin:0 auto;
@@ -46,7 +47,7 @@
 }
 #ninja-slider.fullscreen .slider-inner {
     width:100%;
-    max-width:950px;
+    max-width:450px;
 }
 #ninja-slider ul {
     overflow:hidden;
@@ -57,7 +58,7 @@
 }
 #ninja-slider li {
     width:100%;
-    height:100%;
+    height:450px;
     top:0;
     left:0;
     position: absolute;
@@ -83,7 +84,7 @@
     display:block;
     position: absolute;
     width:100%;
-    height:100%;
+    height:450px;
     background-repeat:no-repeat;
     background-position:center center;
 }
@@ -158,8 +159,8 @@
     display:inline-block;
     width:60px;
     height:100px;
-    line-height:100px;
-    top: 50%;
+    line-height: 40px;
+    top: 30%;
     margin:0;
     margin-top:-65px;/*pager's height should also be counted*/
     background-color:none;
@@ -263,7 +264,7 @@
 }
 #ninja-slider div.video { margin-left: 0!important; }
 /*------ Responsive settings ------*/
-@media only screen and (max-width:950px){
+@media only screen and (max-width:450px){
     #ninja-slider-prev {
         left: -12px;
     }
